Simple caller statistics

--- a/index.html
+++ b/index.html
@@ -36,10 +36,17 @@
                 </li>
             </ul>
             <!-- Copy -->
-            <h4>Inside</h4>
-            <h4>Intern</h4>
-            <h4>From outside</h4>
-            <h4>To outside</h4>
+            <h4 class="placeholder">Inside</h4>
+            <h4 class="placeholder">Intern</h4>
+            <h4 class="placeholder">From outside</h4>
+            <h4 class="placeholder">To outside</h4>
+        </div>
+    </div>
+    <div class="caller">
+        <h2>Stats for <input type="text" name="name" /></h2>
+        <h3>As a caller</h3>
+        <div class="src">
+            <p>Maximum duration <span class="maxDuration"></span></p>
         </div>
     </div>
 </body>
