--- a/index.html
+++ b/index.html
@@ -47,8 +47,19 @@
         <h2>Stats for <input type="text" name="name" /></h2>
         <h3>As a caller</h3>
         <div class="src">
-            <p>Maximum duration: <span data-field="duration" data-stat="max"></span></p>
-            <p>Minimum duration: <span data-field="duration" data-stat="min"></span></p>
+            <p>Mean: <span data-field="duration" data-stat="mean"></span></p>
+            <p>Sum: <span data-field="duration" data-stat="sum"></span></p>
+            <p>Mode: <span data-field="duration" data-stat="mode"></span></p>
+            <p>Variance: <span data-field="duration" data-stat="variance"></span></p>
+            <p>Standard deviation: <span data-field="duration" data-stat="standard_deviation"></span></p>
+            <p>standard deviation: <span data-field="duration" data-stat="standard_deviation"></span></p>
+            <p>Median: <span data-field="duration" data-stat="median"></span></p>
+            <p>Geometric mean: <span data-field="duration" data-stat="geometric_mean"></span></p>
+            <p>Harmonic mean: <span data-field="duration" data-stat="harmonic_mean"></span></p>
+            <p>Root mean square: <span data-field="duration" data-stat="root_mean_square"></span></p>
+            <p>Minimum: <span data-field="duration" data-stat="min"></span></p>
+            <p>Maximum: <span data-field="duration" data-stat="max"></span></p>
+            <p>Sample variance: <span data-field="duration" data-stat="sample_variance"></span></p>
         </div>
     </div>
 </body>
