--- a/index.html
+++ b/index.html
@@ -27,6 +27,15 @@
     <div class="overview">
         <h3>Calls</h3>
         <div class="calls">
+            <p data-filter="last">Last call at
+                <span data-field="calldate">YYYY-MM-DD hh:mm:ss</span> from
+                <span data-field="src">src</span> to
+                <span data-field="dst">dst</span> in context
+                <span data-field="dcontext">dcontext</span>, lasted
+                <span data-field="duration">000</span> seconds
+                (<span data-field="billsec">000</span> billed) with last application being
+                <span data-field="lastapp">lastapp</span>.
+            </p>
             <h4>All</h4>
             <ul class="all">
                 <li>Total:
